master/__PROJECT_CONFIGS/ecproxy/ecproxy.app01/iptables/rules.v4
# Per Project/MinionID SALT Config
# Generated by iptables-save v1.4.14 on Mon Dec 16 13:59:59 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m multiport --dports 22,80,443 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
# OFFICE NET
-A INPUT -s 91.193.167.0/24 -m conntrack --ctstate NEW -j ACCEPT
# SALT/ZABBIX access 
-A INPUT -s zabbix.lvlp.co -p tcp -m conntrack --ctstate NEW -m multiport --dports 10050,4505,4506 -j ACCEPT
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Mon Dec 16 13:59:59 2013
